syntax="proto3";
package proto;

import "google/protobuf/timestamp.proto";
option go_package=".;api";
message ToDo{
    int64 Id=1;
    string Title=2;
    string Description=3;
    google.protobuf.Timestamp Reminder=4;
    
}

message CreateRequest{
    string api=1;
    ToDo todo=2;
}

message CreateResponse{
    string api=1;
    int64 id=2;
}
message ReadRequest{
    string api=1;
    int64 id=2;

}
message ReadResponse{
    string api=1;
    ToDo todo=2;
}
message UpdateRequest{
    string api=1;
    ToDo todo=2;
}
message UpdateResponse{
    string api=1;
    int64 update=2;
}
message DeleteRequest{
    string api=1;
    int64 id=2; 
}
message DeleteResponse{
    string api=1;
    int64 delete=2;
}
message ReadAllRequest{
    string api=1;
}
message ReadAllResponse{
    string api=1;
    repeated ToDo todos=2;
}

service ToDoService{
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}
